# Software_Engineering_and_Testing

./: README.md  pyproject.toml
.github/workflows/: run_tests.yaml
automatic_tests/oblig3_software/: funksjon.py
test_driven_development_introduction/: README.md
test_driven_development_introduction/tests/: test_function.py
tests/: test.py
